<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_home"
        android:title="@string/menu_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:title="@string/menu_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_browser"
        android:title="@string/menu_open_browser"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_session"
        android:title="@string/menu_clear_session"
        app:showAsAction="never" />
</menu>
